Fix issues related to MultiReferenceEditor and SingleReferenceEditor Improve MultiReferenceEditor filter styles Add placeholder to MultiReferenceEditor filter Add placeholder translations Add human_readable property to display readable items Remove date_time model function and add to field.rb

--- a/app/assets/stylesheets/modules/form.scss
+++ b/app/assets/stylesheets/modules/form.scss
@@ -159,20 +159,21 @@ button[data-active=true]:focus {
   margin: 0;
 }
 
-.referenceEditor .multiple-reference-filter .css-1hwfws3 {
-  display: none;
+.referenceEditor .multiple-reference-filter .css-2o5izw {
+  border: none;
+  box-shadow: none;
+  margin-bottom: 0;
 }
 
-.referenceEditor .multiple-reference-container .css-1wy0on6 {
-  position: absolute;
-  right: 0;
+.referenceEditor .multiple-reference-filter .css-1hwfws3 {
+  // display: none;
 }
 
 .referenceEditor .multiple-reference-container .input-group-addon {
   padding: 0;
   border: 0;
   background-color: #FFFFFF;
-  min-width: 8em;
+  min-width: 10em;
 }
 
 .referenceEditor .multiple-reference-container .form-control:focus {
